# bert-squeeze

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  api.html  assistants.html  bert_squeeze.utils.artifacts.html  bert_squeeze.utils.callbacks.html  bert_squeeze.utils.html  bert_squeeze.utils.losses.html  bert_squeeze.utils.schedulers.html  bert_squeeze.utils.scorers.html  bert_squeeze.utils.utils_fct.html  bert_squeeze.utils.vocabulary.html  concepts.html  data.html  distillation.html  distillation.utils.html  faq.html  genindex.html  index.html  inference.html  installation.html  models.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  assistants.doctree  bert_squeeze.utils.artifacts.doctree  bert_squeeze.utils.callbacks.doctree  bert_squeeze.utils.doctree  bert_squeeze.utils.losses.doctree  bert_squeeze.utils.schedulers.doctree  bert_squeeze.utils.scorers.doctree  bert_squeeze.utils.utils_fct.doctree  bert_squeeze.utils.vocabulary.doctree  concepts.doctree  data.doctree  distillation.doctree  distillation.utils.doctree  environment.pickle  faq.doctree  index.doctree  inference.doctree  installation.doctree  models.doctree  overview.doctree
.doctrees/tutorials/: Distillation.doctree  Training.doctree
.github/workflows/: documentation.yaml  pr.yml  release.yaml
_sources/: bert_squeeze.utils.callbacks.rst.txt  bert_squeeze.utils.utils_fct.rst.txt  data.rst.txt  inference.rst.txt  overview.rst.txt
bert-squeeze/: main.py
bert-squeeze/configs/: distil_config.yaml  distil_t2t_config.yaml  hard_distil_t2t_config.yaml  soft_distil_t2t_config.yaml  train_deebert.yaml  train_distilbert.yaml  train_labse.yaml  train_labse_pruning.yaml  train_labse_quantize.yaml  train_lr.yaml  training_deebert.yaml  training_romebert.yaml
bert-squeeze/data/datasets/: conference_dataset.py  unlabeled_dataset.py
bert-squeeze/data/modules/: __init__.py  distillation_module.py  lr_module.py  lstm_module.py  transformer_module.py
bert-squeeze/distillation/: distiller.py  trans2LR.py  trans2trans.py
bert-squeeze/distillation/utils/: labeler.py
bert-squeeze/inference/: model.py
bert-squeeze/models/: __init__.py  base_lt_module.py  custom_bert.py  custom_distilbert.py  custom_labse.py  lr.py  lstm.py  lt_bert.py  lt_deebert.py  lt_distilbert.py  lt_fastbert.py  lt_labse.py  lt_theseus_bert.py
bert-squeeze/models/custom_transformers/: __init__.py  bert.py  fastbert.py  labse.py  theseus_bert.py
bert-squeeze/models/exit_berts/: deebert.py  deebert_layers.py  layers.py  romebert.py
bert-squeeze/models/layers/: classifier.py
bert-squeeze/models/transformers/: __init__.py  bert.py
bert-squeeze/utils/: __init__.py  scorer.py  types.py  utils_fct.py  vocabulary.py
bert-squeeze/utils/artifacts/: __init__.py  distillation_artifacts.py  transformer_artifacts.py
bert-squeeze/utils/callbacks/: __init__.py  checkpointing.py  fastbert_logic.py  lottery_ticket.py  pruning.py  quantization.py
bert-squeeze/utils/errors/: config_errors.py  deebert_errors.py
bert-squeeze/utils/losses/: __init__.py  distillation_losses.py  losses.py  lsl.py
bert-squeeze/utils/optimizers/: __init__.py  bert_adam.py  gradient_rescaler.py
bert-squeeze/utils/schedulers/: theseus_schedulers.py
bert-squeeze/utils/scorers/: __init__.py  scorer.py
bert_squeeze/assistants/: __init__.py  config_types.py  distil_assistant.py  train_assistant.py
bert_squeeze/assistants/configs/: distil.yaml  distil_hard.yaml  distil_parallel.yaml  distil_seq2seq.yaml  distil_soft.yaml  train_adapter.yaml  train_bert.yaml  train_berxit.yaml  train_deebert.yaml  train_fastbert.yaml  train_lr.yaml  train_lstm.yaml  train_t5.yaml  train_theseus_bert.yaml
bert_squeeze/data/: __init__.py
bert_squeeze/data/datasets/: __init__.py  conference_dataset.py
bert_squeeze/data/local_datasets/: __init__.py  conference_dataset.py  parallel_dataset.py  unlabeled_dataset.py
bert_squeeze/data/modules/: __init__.py  base.py  distillation_module.py  lr_module.py  lstm_module.py  transformer_module.py
bert_squeeze/distillation/: __init__.py  base_distiller.py  distiller.py  seq2seq_distiller.py  sequence_classification_distiller.py
bert_squeeze/distillation/utils/: labeler.py
bert_squeeze/inference/: model.py  processors.py
bert_squeeze/models/: __init__.py  base_lt_module.py  llm.py  lr.py  lstm.py  lt_adapter.py  lt_bert.py  lt_berxit.py  lt_deebert.py  lt_distilbert.py  lt_fastbert.py  lt_t5.py  lt_theseus_bert.py
bert_squeeze/models/custom_transformers/: __init__.py  bert.py  berxit.py  deebert.py  encoder_decoder.py  fastbert.py  theseus_bert.py
bert_squeeze/models/layers/: classifier.py  mha.py
bert_squeeze/utils/: __init__.py  types.py  utils_fct.py  vocabulary.py
bert_squeeze/utils/artifacts/: __init__.py  (+2 more)
conf/: config.yaml
conf/callbacks/: none.yaml
conf/data/: transformer.yaml
conf/logger/: tensorboard.yaml
conf/model/: bert.yaml
conf/task/: train.yaml
conf/train/: default.yaml
docs/: api.rst  assistants.rst  bert_squeeze.utils.artifacts.rst  bert_squeeze.utils.losses.rst  bert_squeeze.utils.schedulers.rst  bert_squeeze.utils.scorers.rst  concepts.rst  conf.py  data.rst  distillation.rst  distillation.utils.rst  index.rst  installation.rst
docs/tutorials/: Distillation.ipynb  Training.ipynb
examples/: distil_config.yaml  longt5.py  main.py  t5.py  train_distilbert.yaml  train_fastlabse.yaml  train_labse.yaml  train_labse_quantize.yaml
examples/configs/: distil_config.yaml  distil_t2t_config.yaml  hard_distil_t2t_config.yaml  soft_distil_t2t_config.yaml  train_deebert.yaml  train_fastlabse.yaml  train_labse.yaml  train_labse_pruning.yaml  train_labse_quantize.yaml  train_lr.yaml  train_lstm.yaml  train_theseus_labse.yaml
tests/: conftest.py  test_callbacks_pruning.py  test_hard_labeler.py
tests/assistants/: test_distil_assistant.py  test_train_assistant.py
tests/fixtures/: dummy_models.py
tutorials/: Distillation.html  Distillation.ipynb  Training.html  Training.ipynb
(+120 files in other folders)
