[tool.poetry]
name = "bert-squeeze"
version = "0.1.1"
description = "Tools for Transformers compression using PyTorch Lightning"
authors = ["JulesBelveze <jules.belveze@hotmail.fr>"]
keywords = ["nlp", "transformers", "bert"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
packages = [
    { include = "bert_squeeze" }
]
include = [
    "images/"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
transformers = "^4.20.0"
torch = "^2.0.1"
numpy = "<1.20.0"
tabulate = "^0.8.9"
overrides = "^6.1.0"
python-dotenv = "^0.18.0"
datasets = "^1.8.0"
neptune-client = { extras = ["pytorch-lightning"], version = "^0.14.0" }
omegaconf = "^2.1.0"
lightning = "^2.0.0"
psutil = "^5.8.0"
hydra-core = "^1.1.1"
matplotlib = "<3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
huggingface-hub = "0.13.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "<7.0"
furo = "^2023.3.27"
autodoc-pydantic = "^1.8.0"
sphinxext-opengraph = "^0.8.2"
sphinx-copybutton = "^0.5.2"
myst-parser = "^1.0.0"
nbsphinx = "^0.9.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipdb = "^0.13.13"
taskipy = "^1.10.4"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"


[tool.poetry.group.inference.dependencies]
onnxruntime = "<1.15.0"

[tool.black]
line-length = 90
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 90

[tool.taskipy.tasks]
check-formatting = "black --check bert_squeeze tests && isort --check bert_squeeze tests"
format = "isort bert_squeeze tests && black bert_squeeze tests"
lint = "flake8 --max-line-length 90 --ignore=E203,W503,E501,F401,E266 bert_squeeze/"
test = "pytest tests/*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.masonry.api"
