[project]
name = "bert-squeeze"
version = "0.1.1"
description = "Tools for Transformers compression using PyTorch Lightning"
authors = [
    { name = "JulesBelveze", email = "jules.belveze@hotmail.fr" }
]
keywords = ["nlp", "transformers", "bert"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
# PyTorch wheels are not yet available for Python 3.13 on all platforms
# Keep upper bound to <3.13 until upstream support lands
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "datasets>=3.0.0",
    "lightning>=2.2.0",
    "evaluate>=0.4.0",
    "adapters>=1.0.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.18.0",
    "pydantic>=2.9.0",
    "scikit-learn>=1.4.0",
    "omegaconf>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "neptune-client[pytorch-lightning]>=1.8.6",
    "overrides>=7.7.0",
]

[project.optional-dependencies]
docs = [
    "Sphinx<7.0",
    "furo>=2023.3.27",
    "autodoc-pydantic>=1.8.0",
    "sphinxext-opengraph>=0.8.2",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=1.0.0",
    "nbsphinx>=0.9.2"
]
dev = [
    "pytest>=7.3.1",
    "ipdb>=0.13.13",
    "taskipy>=1.10.4",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "pre-commit>=3.6.0"
]
inference = [
    "onnxruntime>=1.16.3"
]
seq2seq = [
    "nltk>=3.8.1",
    "rouge-score>=0.1.2"
]

[tool.black]
line-length = 90
skip-string-normalization = true
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 90

[tool.mypy]
python_version = "3.9"

[tool.taskipy.tasks]
check-formatting = "uv run black --check bert_squeeze tests && uv run isort --check bert_squeeze tests"
format = "uv run isort bert_squeeze tests && uv run black bert_squeeze tests"
lint = "uv run flake8 --max-line-length 90 --ignore=E203,W503,E501,F401,E266 bert_squeeze/"
test = "uv run pytest -sv tests/*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
